[workspace]

members = [
    "bingushack",
    "jni_mappings",
    "mappings_macro",
    "bingus_module",
    "module_macro_derive",
    "bingus_ui",
    "bingus_client",
    "bingus_setting",
    "setting_macro_derive",
    "macro_common",
]

[profile.release]
debug = false
strip = true
panic = "abort"