[package]
name = "bingus_client"
version = "0.1.0"
edition = "2021"

[dependencies]
bingus_module = { path = "../bingus_module" }
eframe = "0.20.1"
bingus_ui = { path = "../bingus_ui" }
jni_mappings = { path = "../jni_mappings" }
jni = { version = "0.20.0", features = ["invocation"] }
once_cell = "1.17.0"
winapi = { version = "0.3.9", features = ["winuser"] }
winit = "0.27.5"