[package]
name = "bingus_module"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.20.0"
enum_dispatch = "0.3.8"
module_macro_derive = { path = "../module_macro_derive" }
jni_mappings = { path = "../jni_mappings" }
bingus_setting = { path = "../bingus_setting" }
mappings_macro = { path = "../mappings_macro" }
once_cell = "1.17.0"
rand = "0.8.5"
eframe = { path = "../lib/egui/crates/eframe" }
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
winit = "0.27.5"