[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
bingus_client = { path = "../bingus_client" }
crochet = "0.1.1"
once_cell = "1.17.0"
gl = "0.14.0"
widestring = "1.0.2"

[lib]
crate-type = ["dylib"]
