[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
bingus_client = { path = "../bingus_client" }
bingus_module = { path = "../bingus_module" }
crochet = "0.1.1"
once_cell = "1.17.0"
gl = "0.14.0"  # glu-sys = "0.1.4"
widestring = "1.0.2"
obfstr = "0.4.1"
uniqueid = "0.2.6"

[lib]
crate-type = ["dylib"]
