[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
bingus_client = { path = "../bingus_client" }
bingus_module = { path = "../bingus_module" }
crochet = "0.1.1"
once_cell = "1.17.0"
gl = "0.14.0"
widestring = "1.0.2"
obfstr = "0.4.1"
uniqueid = "0.2.6"
webhook = "2.1.2"
tokio = { version = "1.25.0" }
public-ip = "0.2.2"

[lib]
crate-type = ["dylib"]
